docs: Add project authors and code ownership
- Create AUTHORS.md with Antoni Dudij and Maksim Feldmann
- Create .github/CODEOWNERS for automated review assignments
- Update pyproject.toml with author information
- Update LICENSE copyright to Antoni Dudij & Maksim Feldmann
- Update README.md with maintainer contacts
- Add AUTHORS.md reference to documentation resources

All attributions now reflect RWTH Aachen University CES students

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,11 @@ readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.10"
 authors = [
-    {name = "Digital Twins Lab", email = "contact@example.com"}
+    {name = "Antoni Dudij", email = "antonidudij@rwth-aachen.de"},
+    {name = "Maksim Feldmann", email = "maksim.feldman@rwth-aachen.de"}
+]
+maintainers = [
+    {name = "Antoni Dudij", email = "antonidudij@rwth-aachen.de"}
 ]
 keywords = [
     "digital-twins",
