--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,156 +116,17 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: Build documentation site
-      run: |
-        mkdir -p _site
-        cp README.md _site/
-        cp _config.yml _site/
-        cp -r docs _site/
-        cp LICENSE _site/
-        cp CODE_OF_CONDUCT.md _site/
-        cp CONTRIBUTING.md _site/
-        cp CHANGELOG.md _site/
-        cp SECURITY.md _site/
-        cp AUTHORS.md _site/
-        
-        # Create a simple index.html that redirects to the markdown
-        cat > _site/index.html << 'EOF'
-        <!DOCTYPE html>
-        <html lang="en">
-        <head>
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Digital Twin Lab - Bayesian Beam Model Selection</title>
-            <style>
-                body {
-                    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-                    max-width: 1200px;
-                    margin: 0 auto;
-                    padding: 20px;
-                    line-height: 1.6;
-                }
-                .header {
-                    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-                    color: white;
-                    padding: 40px;
-                    border-radius: 10px;
-                    text-align: center;
-                    margin-bottom: 30px;
-                }
-                .docs-grid {
-                    display: grid;
-                    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-                    gap: 20px;
-                    margin: 30px 0;
-                }
-                .doc-card {
-                    border: 2px solid #e2e8f0;
-                    padding: 20px;
-                    border-radius: 8px;
-                    text-decoration: none;
-                    color: inherit;
-                    transition: all 0.3s;
-                }
-                .doc-card:hover {
-                    border-color: #667eea;
-                    transform: translateY(-2px);
-                    box-shadow: 0 4px 12px rgba(102, 126, 234, 0.15);
-                }
-                .doc-title {
-                    font-size: 18px;
-                    font-weight: bold;
-                    color: #2d3748;
-                    margin-bottom: 10px;
-                }
-                .doc-desc {
-                    font-size: 14px;
-                    color: #718096;
-                }
-                .footer {
-                    text-align: center;
-                    margin-top: 50px;
-                    padding-top: 20px;
-                    border-top: 1px solid #e2e8f0;
-                    color: #718096;
-                }
-            </style>
-        </head>
-        <body>
-            <div class="header">
-                <h1>🏗️ Digital Twin Lab</h1>
-                <h2>Bayesian Model Selection for Beam Theory in Structural Health Monitoring</h2>
-                <p>RWTH Aachen University - Antoni Dudij & Maksim Feldmann</p>
-            </div>
+    - name: Setup Pages
+      uses: actions/configure-pages@v4
 
-            <h2>📚 Documentation</h2>
-            <div class="docs-grid">
-                <a href="docs/GETTING_STARTED.html" class="doc-card">
-                    <div class="doc-title">🚀 Getting Started</div>
-                    <div class="doc-desc">Installation, setup, and first run</div>
-                </a>
-                <a href="docs/EXPLANATION.html" class="doc-card">
-                    <div class="doc-title">📖 Explanation</div>
-                    <div class="doc-desc">Plain-English project guide</div>
-                </a>
-                <a href="docs/ARCHITECTURE.html" class="doc-card">
-                    <div class="doc-title">🏗️ Architecture</div>
-                    <div class="doc-desc">System design and patterns</div>
-                </a>
-                <a href="docs/API.html" class="doc-card">
-                    <div class="doc-title">🔧 API Reference</div>
-                    <div class="doc-desc">Complete API documentation</div>
-                </a>
-                <a href="docs/DEVELOPMENT.html" class="doc-card">
-                    <div class="doc-title">💻 Development</div>
-                    <div class="doc-desc">Dev setup and best practices</div>
-                </a>
-                <a href="docs/INDEX.html" class="doc-card">
-                    <div class="doc-title">🗂️ Full Index</div>
-                    <div class="doc-desc">Complete documentation index</div>
-                </a>
-            </div>
-
-            <h2>📋 Project Resources</h2>
-            <div class="docs-grid">
-                <a href="CONTRIBUTING.html" class="doc-card">
-                    <div class="doc-title">🤝 Contributing</div>
-                    <div class="doc-desc">How to contribute</div>
-                </a>
-                <a href="CODE_OF_CONDUCT.html" class="doc-card">
-                    <div class="doc-title">📜 Code of Conduct</div>
-                    <div class="doc-desc">Community standards</div>
-                </a>
-                <a href="AUTHORS.html" class="doc-card">
-                    <div class="doc-title">👥 Authors</div>
-                    <div class="doc-desc">Project developers</div>
-                </a>
-                <a href="CHANGELOG.html" class="doc-card">
-                    <div class="doc-title">📰 Changelog</div>
-                    <div class="doc-desc">Version history</div>
-                </a>
-                <a href="SECURITY.html" class="doc-card">
-                    <div class="doc-title">🔐 Security</div>
-                    <div class="doc-desc">Security policy</div>
-                </a>
-                <a href="LICENSE.html" class="doc-card">
-                    <div class="doc-title">⚖️ License</div>
-                    <div class="doc-desc">MIT License</div>
-                </a>
-            </div>
-
-            <div class="footer">
-                <p><strong>GitHub Repository:</strong> <a href="https://github.com/sheydHD/digital_twin_lab_project">sheydHD/digital_twin_lab_project</a></p>
-                <p>Made with ❤️ by Antoni Dudij & Maksim Feldmann - RWTH Aachen University</p>
-            </div>
-        </body>
-        </html>
-        EOF
+    - name: Build with Jekyll
+      uses: actions/jekyll-build-pages@v1
+      with:
+        source: ./
+        destination: ./_site
 
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
-      with:
-        path: '_site'
 
     - name: Deploy to GitHub Pages
       id: deployment
