style: FAANG code standards compliance
- Add missing return type hint to log_marginal_harmonic()
- Add py.typed marker for PEP 561 type checking support
- Add .pre-commit-config.yaml with ruff, mypy, bandit hooks
- Add bandit security config to pyproject.toml
- Replace TODO comment with GitHub issue reference

All 58 tests pass.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -128,6 +128,10 @@ warn_return_any = true
 warn_unused_configs = true
 ignore_missing_imports = true
 
+[tool.bandit]
+exclude_dirs = ["tests", "docs"]
+skips = ["B101"]  # Allow assert statements
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py", "*_test.py"]
