feat: wire bridge sampling as primary model selection method
Bridge Sampling Integration:
- Implement compute_marginal_likelihood('bridge_sampling') in calibration.py
- Build NumPy log-likelihood and log-prior callables from calibrator state
- Store dataset reference in calibrator for post-calibration bridge sampling
- Falls back to harmonic mean if bridge sampling doesn't converge
- Orchestrator now uses method='bridge_sampling' for all calibrations
- Model selection uses use_marginal_likelihood=True (true Bayes factors)

Bug Fixes & Improvements:
- Fix unused L/r computation in timoshenko.py
- Fix API.md sign convention for strain y-position
- Add strain calibration forward model (_pytensor_strain_forward_normalized)
- Route strain vs displacement data_type in _build_pymc_model
- Wire frequency report generation into orchestrator
- Add prior/posterior distribution plots to visualization.py
- Add optuna dependency to pyproject.toml
- Adjust aspect ratios in default config (add L/h=19, remove L/h=70,100)

Documentation:
- Add BAYESIAN_GLOSSARY.md: 25-entry glossary with actual usage status
- Add PRESENTATION_GUIDE.md: 20-slide presentation structure
- Add Parameters.md: calibration data types and frequency analysis
- Add meeting notes (After meeting 04_02_2026.md)
- Update API.md with strain calibration docs
- Add .obsidian/ to .gitignore

All 58 tests passing.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dependencies = [
     "rich>=13.0.0",
     "click>=8.1.0",
     "h5py>=3.9.0",
+    "optuna>=3.5.0",
 ]
 
 [project.optional-dependencies]
