--- a/configs/default_config.yaml
+++ b/configs/default_config.yaml
@@ -12,12 +12,11 @@ beam_parameters:
     - 10   # Moderate
     - 12   # Transition region expected
     - 15   # Transition region
+    - 19   # Moderately thick beam
     - 20   # Moderately slender
     - 30   # Slender beam - EB expected
     - 50   # Very slender beam
-    - 60   
-    - 70   
-    - 100  
+    - 60   # Extremely slender beam - EB should dominate
 
 # Material properties (Structural Steel)
 material:
