refactor: full codebase cleanup and documentation rewrite
code changes:
- replace WAIC/LOO/harmonic mean with bridge sampling for model selection
- add normalization module for MCMC stability
- fix bugs: bare expressions, chained != comparison
- remove dead code across 10+ files (26 items)
- remove EulerBernoulliFEM class (unused)
- remove duplicate compute_shear_angle method
- fix Makefile and pyproject.toml entry point

documentation:
- rewrite all 17 docs with lowercase headers, no emoji, neutral tone
- fix stale references to LOO, harmonic mean, EulerBernoulliFEM
- update API docs, glossary, architecture to match current code
- trim internal audit/implementation docs to historical summaries
- add unreleased section to changelog

--- a/configs/default_config.yaml
+++ b/configs/default_config.yaml
@@ -55,17 +55,19 @@ bayesian:
   target_accept: 0.95 # Target acceptance rate for NUTS
   random_seed: 42     # Random seed for reproducibility
   
-  # Data normalization settings (NEW)
+  # Data normalization settings
   # Normalizes quantities to O(1) for numerical stability
   normalization:
     enabled: true           # Enable data normalization for stable MCMC
     method: "max_abs"       # Method: "max_abs", "std", or "range"
   
-  # Evidence estimation method (NEW)
-  # "waic" = fast but approximate, "bridge" = accurate but slower
-  evidence_method: "waic"
+  # Evidence estimation method
+  # Bridge sampling (Meng & Wong, 1996) is used exclusively.
+  # It computes the true marginal likelihood p(y|M) for Bayes factor computation.
+  # WAIC is computed for diagnostics only.
+  evidence_method: "bridge_sampling"
 
-# Convergence diagnostics settings (NEW)
+# Convergence diagnostics settings
 # These thresholds determine when MCMC results are acceptable
 convergence:
   # R-hat thresholds (Gelman-Rubin statistic)
