build: update project infrastructure and CI pipeline
- Add .dockerignore, root Dockerfile, and docker-compose.yml
- Rewrite .github/workflows/ci.yml for the new project layout
- Slim down .gitignore (remove legacy entries)
- Update .pre-commit-config.yaml hooks
- Add CITATION.cff for academic citation
- Overhaul Makefile with backend/frontend/Docker targets
- Modernize pyproject.toml (ruff, pytest config, entry points)
- Add requirements.lock for reproducible installs
- Update configs/default_config.yaml defaults

--- a/configs/default_config.yaml
+++ b/configs/default_config.yaml
@@ -94,7 +94,7 @@ priors:
   poisson_ratio:
     distribution: normal
     mu: 0.3
-    sigma: 0.05  # Widened from 0.03 to reduce Occam asymmetry
+    sigma: 0.05  # Consistent across code, config, and presentation
   observation_noise:
     distribution: halfnormal
     sigma: 1.0e-6
