--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD
+name: CI
 
 on:
   push:
@@ -6,128 +6,145 @@ on:
   pull_request:
     branches: [ main, develop ]
 
-# Allow only one concurrent deployment
 concurrency:
-  group: "pages"
-  cancel-in-progress: false
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 permissions:
   contents: read
-  pages: write
-  id-token: write
 
 jobs:
+  # ── Lint & Format ────────────────────────────────────────────────────────────
+  lint:
+    name: Lint & Format (ruff)
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: astral-sh/setup-uv@v4
+        with:
+          enable-cache: true
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
+      - name: Install dev dependencies
+        run: uv pip install --system -e ".[dev]"
+
+      - name: Lint (ruff check)
+        run: ruff check apps/ tests/
+
+      - name: Format check (ruff format)
+        run: ruff format --check apps/ tests/
+
+  # ── Tests ─────────────────────────────────────────────────────────────────────
   test:
+    name: Tests (Python ${{ matrix.python-version }}, ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
         python-version: ['3.10', '3.11', '3.12']
+        include:
+          - os: macos-latest
+            python-version: '3.12'
+          - os: windows-latest
+            python-version: '3.12'
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-        cache: 'pip'
+      - uses: astral-sh/setup-uv@v4
+        with:
+          enable-cache: true
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e ".[dev]"
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Lint with pylint (non-blocking)
-      run: |
-        pylint apps/ tests/ || echo "Pylint found issues but continuing..."
-      continue-on-error: true
+      - name: Install dependencies
+        run: uv pip install --system -e ".[dev]"
 
-    - name: Check formatting with black
-      run: |
-        black --check apps/ tests/ || echo "Black formatting issues found"
-      continue-on-error: true
+      - name: Run tests
+        run: pytest tests/ -v --cov=apps --cov-report=xml --cov-report=term-missing
 
-    - name: Run tests with pytest
-      run: |
-        pytest tests/ -v --cov=apps --cov-report=xml --cov-report=term
+      - name: Upload coverage (ubuntu / 3.12 only)
+        if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.12'
+        uses: codecov/codecov-action@v4
+        with:
+          file: ./coverage.xml
+          fail_ci_if_error: false
 
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v4
-      with:
-        file: ./coverage.xml
-        flags: unittests
-        name: codecov-umbrella
-        fail_ci_if_error: false
-
-  docs:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.10'
-
-    - name: Check markdown files exist
-      run: |
-        echo "Checking documentation structure..."
-        ls -la docs/
-        ls -la *.md
-        echo "Documentation check passed!"
-
+  # ── Security ──────────────────────────────────────────────────────────────────
   security:
+    name: Security audit (bandit + pip-audit)
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.10'
+      - uses: astral-sh/setup-uv@v4
+        with:
+          enable-cache: true
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e ".[dev]"
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
 
-    - name: Check for security vulnerabilities (non-blocking)
-      run: |
-        safety check || echo "Safety check completed with warnings"
-        bandit -r apps/ -ll || echo "Bandit scan completed"
-      continue-on-error: true
+      - name: Install dev dependencies
+        run: uv pip install --system -e ".[dev]"
 
-  deploy-docs:
+      - name: bandit (static security analysis)
+        run: bandit -r apps/ -q
+
+      - name: pip-audit (CVE check)
+        run: pip-audit --skip-editable || true
+
+  # ── Docs build ────────────────────────────────────────────────────────────────
+  docs:
+    name: Build MkDocs site
     runs-on: ubuntu-latest
-    needs: [test, docs, security]
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: astral-sh/setup-uv@v4
+        with:
+          enable-cache: true
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
+      - name: Install docs dependencies
+        run: uv pip install --system -e ".[docs]"
+
+      - name: Build docs
+        run: mkdocs build --strict
+
+      - name: Upload docs artifact
+        if: github.ref == 'refs/heads/main'
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: site/
+
+  # ── Deploy docs to GitHub Pages (main branch only) ─────────────────────────
+  deploy-docs:
+    name: Deploy to GitHub Pages
+    runs-on: ubuntu-latest
+    needs: [lint, test, docs]
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    
+    permissions:
+      pages: write
+      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    
     steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.10'
-
-    - name: Setup Pages
-      uses: actions/configure-pages@v4
-
-    - name: Build with Jekyll
-      uses: actions/jekyll-build-pages@v1
-      with:
-        source: ./
-        destination: ./_site
-
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v3
-
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v4
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
