fix: docker perf, image display, config flow, docs clarity
- docker-compose: add pytensor_cache volume, remove --reload, cap
  OMP/OPENBLAS/MKL threads to 1, disable CHOKIDAR polling
- Dockerfile: bake PyTensor C-kernel warmup into image build layer,
  set thread-count env vars
- orchestrator: generate beam_comparison plot for every dataset (not
  just datasets[0]) so frontend slider reflects configured ratios
- simulation service: clear figures dir before each run so stale plots
  from previous runs never appear in current results
- model_selection: update comments — log BF ≈ 0 at high L/h is
  physically expected (shear negligible), not inconclusive
- Dashboard.css: fix lightbox overlay (position:fixed, z-index, flex
  centering), constrain thumbnail images, cap deflection image height
- docs/README/configs: correct inconclusive label scope to transition
  zone only (L/h ≈ 15-19); slender beams (L/h ≥ 20) correctly select EB

--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -44,10 +44,47 @@ COPY --from=builder /app /app
 
 # PYTENSOR_FLAGS: Force PyTensor to use the installed OpenBLAS library.
 # This eliminates the "PyTensor could not link to a BLAS installation" warning.
+# base_compiledir is set to /root/.pytensor which is mounted as a named volume
+# in docker-compose so the compiled C-kernels survive container restarts.
 ENV PATH="/opt/venv/bin:$PATH" \
     PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
-    PYTENSOR_FLAGS='blas__ldflags=-lopenblas'
+    PYTENSOR_FLAGS="blas__ldflags=-lopenblas,base_compiledir=/root/.pytensor" \
+    OMP_NUM_THREADS=1 \
+    OPENBLAS_NUM_THREADS=1 \
+    MKL_NUM_THREADS=1 \
+    NUMEXPR_NUM_THREADS=1
+
+# Pre-compile PyTensor C-kernels at image-build time.
+# PyTensor JIT-compiles computational graphs to C on first use, which can
+# take several minutes per model.  Running a minimal PyMC model here bakes the
+# compiled artefacts into the image layer so the first container start is fast.
+# The named volume mounted at /root/.pytensor at runtime will be initialised
+# from these pre-compiled files by Docker on first use (empty-volume seeding).
+RUN python - <<'EOF'
+import os, warnings
+warnings.filterwarnings("ignore")
+# Minimal PyMC model that exercises the same Ops used by the calibrators
+# (Normal likelihood, LogNormal prior, HalfNormal, pm.sample with NUTS).
+import numpy as np
+import pymc as pm
+
+rng = np.random.default_rng(0)
+y_obs = rng.normal(0.0, 1.0, size=10)
+
+with pm.Model():
+    mu    = pm.Normal("mu", mu=0, sigma=1)
+    sigma = pm.HalfNormal("sigma", sigma=1)
+    _     = pm.Normal("y", mu=mu, sigma=sigma, observed=y_obs)
+    pm.sample(
+        draws=10, tune=10, chains=1,
+        progressbar=False,
+        random_seed=0,
+        # Use only 1 chain so the subprocess overhead is minimal during build.
+        compute_convergence_checks=False,
+    )
+print("PyTensor warmup complete – C-kernels compiled and cached.")
+EOF
 
 EXPOSE 8000
 CMD ["uvicorn", "apps.backend.api.app:app", "--host", "0.0.0.0", "--port", "8000"]
